# TauriTry

./: .commitlintrc.js  .env  .eslintrc-auto-import.json  .gitignore  .stylelintignore  .windsurfrules  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  setup-deepseek.js  uno.config.ts  vite.config.ts
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/app/: get_package_info.rs  mod.rs
src-tauri/src/api/network/: http_client.rs  mod.rs
src-tauri/src/api/weather/: get_weather.rs  mod.rs
src-tauri/src/weather/: get_weather.rs  mod.rs
src/layout/default/: default.vue
src/layout/default/components/Dock/: Dock.vue  DockIcon.vue  injectionKeys.ts
src/layout/default/components/FallingStarsBg/: canvasManager.ts  effectRenderer.ts  index.vue  optimizedStarWorker.ts  performanceManager.ts  starRenderer.ts  starWorker.ts  types.ts  utils.ts  workerManager.ts
src/layout/default/components/TitleBar/: index.vue
src/layout/default/components/TitleBar/components/: weather.vue
src/lib/: systemTray.ts  utils.ts
src/router/: index.ts
src/view/index/: index.vue
src/view/index/components/: FallingStarsBg.vue
src/view/index/components/Dock/: Dock.vue  DockSeparator.vue  index.ts  types.ts
src/view/index/components/FallingStarsBg/: index.vue  starWorker.ts
